Advance dashboard section development

--- a/index.html
+++ b/index.html
@@ -4,15 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POS-restaurant</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>
-        EN DESARROLLO
-    </h1>
-    <p style="font-size: 2rem; color:blueviolet; font-weight: bold;">
-        Abre tu archivo html asignado y trabaja en el.
-        Luego se junta todo.
-    </p>
+    <div class="container">
+        <aside class="aside">
+            <header>
+                <img src="" alt="l">
+                <h1>
+                    Smart<span class="aside-title-mod">POS</span>
+                </h1>
+            </header>
+            <div class="nav-container">
+                <nav class="navbar">
+                    <a href="#" class="navbar-item">
+                        <img src="./img/dashboard-icon.svg" alt="icono">
+                        <p>Dashboard</p>
+                    </a>
+                    <a href="#" class="navbar-item">
+                        <img src="" alt="icono">
+                        <p>Food & Drinks</p>
+                    </a>
+                    <a href="#" class="navbar-item">
+                        <img src="./img/messages.svg" alt="icono">
+                        <p>Messages</p>
+                    </a>
+                    <a href="#" class="navbar-item">
+                        <img src="" alt="icono">
+                        <p>Bills</p>
+                    </a>
+                    <a href="#" class="navbar-item">
+                        <img src="" alt="icono">
+                        <p>Settings</p>
+                    </a>
+                    <p>Other</p>
+                    <a href="#" class="navbar-item">
+                        <img src="" alt="">
+                        <p>Notifications</p>
+                    </a>
+                    <a href="#" class="navbar-item">
+                        <img src="" alt="">
+                        <p>Support</p>
+                    </a>
+                </nav>
+                <div class="aside-profile">
+                    <div>
+                        <picture class="aside-profile-img">
+                            <img src="./img/perfil-woman.jpg" alt="foto de perfil">
+                        </picture>
+                        <h3>Theresa Webp</h3>
+                        <p>Waiter . 4h 56m</p>
+                    </div>
+                    <a href="#" class="btn">Open profile</a>
+                </div>
+            </div>
+            <p class="copy">&copy; 2020 SmartPOS App</p>
+        </aside>
+        <main class="main-content">
+            <section class="dashboard">
+                <header>
+                    <div>
+                        <a href=""><-</a>
+                    </div>
+                    <div>
+                        icon icon
+                    </div>
+                </header>
+                <div class="dashboard-content">
+                    <div>
+                        <h2>Dashboard</h2>
+                        <div>
+                            Yesterday Today ....
+                        </div>
+                    </div>
+                    <div class="dashboard-stats">
+                        <div>
+                            lines
+                        </div>
+                        <div>
+                            pastel
+                        </div>
+                        <div>
+                            trending
+                        </div>
+                        <div>
+                            employees
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+        </main>
+    </div>
+
 </body>
 </html>
